# poetry-projects

./: .env  README.md  docker-compose.yml
backend-projects/: Dockerfile  pyproject.toml
backend-projects/backend_projects/: db.py  main.py  objects.py  schemas.py  utils.py
backend-projects/traefik/data/: traefik.yml
