[tool.poetry]
name = "backend-projects"
version = "0.1.0"
description = ""
authors = ["Gabriela Puerta <gabrieladjph1@gmail.com>"]
readme = "README.md"
packages = [{include = "backend_projects"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
